name:                thumbnail-plus-failure
version:             0.1.0.0
author:              Bas van Dijk
maintainer:          v.dijk.bas@gmail.com
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  test.jpg
  test.png
  test.gif

executable thumbnail-plus-failure
  main-is:             Main.hs
  build-depends:       base, thumbnail-plus, conduit, conduit-extra
  default-language:    Haskell2010
